# BurmeseTypingAssist

./: .gitignore  CMakeLists.txt  Makefile  README.md  burm.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  transliteration_guide.json  transliterationguide.cpp  transliterationguide.h  transliterationguide.ui
BurmeseTypingAssist_autogen/: deps  mocs_compilation.cpp
BurmeseTypingAssist_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_transliterationguide.cpp
BurmeseTypingAssist_autogen/include/: ui_mainwindow.h  ui_transliterationguide.h
